fix URL Java20 deprecation